# IiSI-Zaawansowane-technologie-bazodanowe-PROJ

./: .env.dist  .gitignore  README.md  config.py  create.sql  create_book_db.sql  database_description.txt  database_description_pattern.txt  database_schema  docker-compose.yaml  main.py  pyproject.toml  read.md  requirements.txt
Database/: __init__.py  database.py
Kroki/: kroki.py
Menu/: menu.py
chatGPT/: chat_gpt.py  prompt.py
context/: __init__.py  context.py
database/: __init__.py  database.py
description/: __init__.py  description_generator.py  error.py  questions.py
kroki/: kroki.py
markdown/: __init__.py  markdown_generator.py
menu/: menu.py
