[tool.poetry]
name = "iisi-zaawansowane-technologie-bazodanowe-proj"
version = "0.1.0"
description = ""
authors = ["oxygensend <szymon19314@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
SQLAlchemy = "1.4.25"
psycopg2 = "2.9.1"
graphviz = "0.17"
openai = "^0.28.1"
setuptools = "^68.2.2"
python-dotenv = "^1.0.0"
cairosvg = "^2.7.1"
matplotlib = "^3.8.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
